--- a/app/globals.css
+++ b/app/globals.css
@@ -7,4 +7,10 @@
         @apply relative text-xl w-fit block after:block after:content-[''] font-semibold after:absolute after:h-[3px] after:bg-yellow-400 text-white after:w-full after:scale-x-0
         after:hover:scale-x-100 after:transition after:duration-300 after:origin-center
     }
+    .footer__heading{
+        @apply  text-lg text-white font-bold mb-4
+    }
+    .footer__link{
+        @apply text-sm text-white hover:text-green-700 cursor-progress text-opacity-60 mb-3 w-fit
+    }
 }
